# syndwarsfx-sfx

./: LICENSE.md  Makefile.am  README.md  configure.ac  filelist_credits.txt  sfx_config.h.in  sfxprivconfig.h.in
.github/workflows/: build.yaml
sound/: filelist_beta_demo.txt  filelist_eng.txt  filelist_enps1.txt  filelist_fre.txt  filelist_ger.txt  filelist_ita.txt  filelist_jap.txt  filelist_jen.txt  filelist_spa.txt  filelist_swe.txt
sound-lc/: filelist_jap.txt  filelist_swe.txt
sound/pre_alpha/: filelist_pre_alpha.txt
syncreds/: filelist_credits.txt
